apps/mantine.dev/src/components/MdxLlmAffix/MdxLlmAffix.module.css
.root {
  background-color: var(--mantine-color-body);
  border: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
  padding: 4px;
  box-shadow: light-dark(var(--mantine-shadow-md), none);
}

.title {
  font-family: var(--mantine-font-family-monospace);
  font-weight: 600;
  text-align: center;
  font-size: 12px;
  margin-bottom: 6px;
  padding-top: 2px;
  color: var(--mantine-color-bright);
}

.control {
  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-5));
  border-radius: calc(var(--mantine-radius-md) - 2px);
  border-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-5));
}

.icon {
  &[data-color='yellow'] {
    color: light-dark(var(--mantine-color-yellow-8), var(--mantine-color-yellow-4));
  }

  &[data-color='red'] {
    color: light-dark(var(--mantine-color-red-8), var(--mantine-color-red-6));
  }

  &[data-color='teal'] {
    color: light-dark(var(--mantine-color-teal-8), var(--mantine-color-teal-4));
  }

  &[data-color='cyan'] {
    color: light-dark(var(--mantine-color-cyan-8), var(--mantine-color-cyan-4));
  }
}

